# Alcugs

./: .cvsignore  .gitignore  ARCHITECTURE  AUTHORS  BUGS  CMakeLists.txt  CONFIG  ChangeLog  DATASERVER  DEVELOPERS  DISCLAIMER  Doxyfile  Feature-Requests  HELPING  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.old  NEWS  README  TODO  TODO-deferred  TROUBLESHOOTING  aclocal.m4  adv_gamemsgparser.cpp  adv_gamemsgparser.h  ageparser.cpp  ageparser.h  alcmsgtest.sh  alcugs.dsw  all.dsp  auth.cpp  auth.h  auth_cags.cpp  auth_cags.h  auth_db.cpp  auth_db.h  auth_db_cgas.cpp  auth_db_cgas.h  (+212 more)
alcbase/: CMakeLists.txt  alcconfig.h.in  alcdebug.cpp  alcdebug.h  alcdefs.h  alcexception.cpp  alcexception.h  alclicense.cpp  alclicense.h  alcmain.cpp  alcmain.h  alctypes.cpp  alctypes.h  alcugs.h  alcversion.cpp  alcversion.h  alcxversion.h
alcbase/alcutil/: alccfgtypes.cpp  alccfgtypes.h  alclog.cpp  alclog.h  alcos.cpp  alcos.h  alcparser.cpp  alcparser.h  alcthread.cpp  alcthread.h  conv_funs.cpp  md5.cpp  md5.h  rijndael.cpp  rijndael.h  useful.cpp  useful.h  windoze.h
alcbase/test/: alcbase_test.cpp  alcthread_test.cpp
alcbase/urutypes/: ageinfo.cpp  ageinfo.h  plbase.cpp  plbase.h  plmessage.cpp  plmessage.h  urubasetypes.cpp  urubasetypes.h  uruconsts.h  whatdoyousee.cpp  whatdoyousee.h
alcnet/: CMakeLists.txt  alcnet.h  netexception.h  netlog.cpp  netlog.h  netmsgq.h  netqueue.h  netsession.cpp  netsession.h  netsessionmgr.cpp  netsessionmgr.h  sql.cpp  sql.h  unet.cpp  unet.h  unetbase.cpp  unetbase.h  unetlobbyserverbase.cpp  unetlobbyserverbase.h  unetmain.cpp  unetmain.h  unetserverbase.cpp  unetserverbase.h
alcnet/protocol/: authmsg.cpp  authmsg.h  gamemsg.cpp  gamemsg.h  lobbybasemsg.cpp  lobbybasemsg.h  lobbymsg.cpp  lobbymsg.h  protocol.cpp  protocol.h  trackingmsg.cpp  trackingmsg.h  umsgbasic.cpp  umsgbasic.h  vaultmsg.cpp  vaultmsg.h  vaultproto.cpp  vaultproto.h
alcnet/test/: alcmsgtest.sh  bincomp.cpp
cmake/: FindMySQL.cmake
deprecated/: README  auth_db.sql  install.sh
docs/: .cvsignore  Makefile.in  README.parameters  alcPrefixes.txt  api.txt  guidelines.txt  plstate.dia  unknownProtocolParts.txt  urumsg.txt  vault_db.txt
include/: Makefile.am  Makefile.in
include/alcbase/: alcconfig.h.in  alcconfig_old.h  alcdebug.h  alcexception.h  alclicense.h  alcmain.h  alctypes.h  alcugs.h  alcversion.h  alcxversion.h
include/alcbase/alcutil/: alccfgtypes.h  alclog.h  alcos.h  alcparser.h  alcpkg.h  alcthread.h  conv_funs.h  md5.h  useful.h  windoze.h
include/alcbase/urutypes/: ageinfo.h  plbase.h  plmessage.h  pypkg.h  urubasetypes.h  uruconsts.h  whatdoyousee.h
include/alcnet/: ageinfo.h  alcnet.h  configalias.h  guidgen.h  netcore.h  netlog.h  netmsgq.h  netsession.h  netsessionmgr.h  sql.h  unet.h  unet2.h  unetbase.h  unetlobbyserverbase.h  unetmain.h  unetserverbase.h
include/alcnet/protocol/: authmsg.h  ext-protocol.h  gamemsg.h  lobbybasemsg.h  lobbymsg.h  msgparsers.h  prot.h  protocol.h  trackingmsg.h  umsgbasic.h  vaultmsg.h  vaultproto.h  vaultrouter.h
include/alcugs/: alcconfig.h  alcconfig_old.h  alcdebug.h  alcexception.h  alclicense.h  alcmain.h  alctypes.h  alcugs.h  alcversion.h  alcxversion.h
include/alcugs/alcutil/: alccfgtypes.h  alclog.h  alcos.h  alcparser.h  alcpkg.h  alcthread.h  conv_funs.h  useful.h  windoze.h
include/alcugs/urunet/: configalias.h  netcore.h  netlog.h  netmsgq.h  netsession.h  netsessionmgr.h  unet.h  unetlobbyserverbase.h  unetmain.h  unetserverbase.h  urunet.h
include/alcugs/urunet/protocol/: prot.h  protocol.h  umsgbasic.h
include/alcugs/urutypes/: urubasetypes.h  whatdoyousee.h
m4/: align.m4  mysql.m4  withpath.m4
patches/: unet2-game.patch  unet3-tracking.patch
proposedsdlstuff/: pythonglue_partial.cpp  sdlparser.cpp  sdlparser.h
python/: Personal.py  README  console.py  tests.py  xMailCrashReport.py  xMailReport.py  xSystem.py
script/: README  decrypt_all.sh  huru-servers.sh  modifylevelaccount.sh  vaultwipe.sh
scripts/: README  addadmin.sh  adduser-config.php  adduser.php  checkpublicages.sh  control-servers.sh  log-filter.sh  showplayers.sh
scripts_old/: README  allclean.sh  cleanlog.sh  givemuseum.sh  huru-servers-debug.sh  hurulib.sh  viewplayer.sh
servers/: CMakeLists.txt  alcmsgtest.cpp  alcping.cpp  alcugs_main.cpp  authbackend.cpp  authbackend.h  authserver.cpp  authserver.h  gameserver.cpp  gameserver.h  lobbyserver.cpp  lobbyserver.h  sdl.cpp  sdl.h  sdlbinary.cpp  sdlbinary.h  trackingbackend.cpp  trackingbackend.h  trackingserver.cpp  trackingserver.h  vaultbackend.cpp  vaultbackend.h  vaultdb.cpp  vaultdb.h  vaultserver.cpp  vaultserver.h
src/: Makefile.am  Makefile.in
src/alcbase/: Makefile.am  Makefile.in  alcdebug.cpp  alcexception.cpp  alclicense.cpp  alcmain.cpp  alctypes.cpp  alcversion.cpp
src/alcbase/alcutil/: alccfgtypes.cpp  alclog.cpp  alcos.cpp  alcparser.cpp  alcpkg.cpp  alcthread.cpp  conv_funs.cpp  md5.cpp  rijndael.cpp  useful.cpp  windoze.cpp
src/alcbase/test/: Makefile.am  alcbase_test.cpp  alcthread_test.cpp  tclean.sh  test.cpp  test2.cpp
src/alcbase/urutypes/: ageinfo.cpp  plbase.cpp  plmessage.cpp  pypkg.cpp  urubasetypes.cpp  whatdoyousee.cpp
src/alcnet/: ageinfo.cpp  alcnet.cpp  configalias.cpp  guidgen.cpp  netcore.cpp  netlog.cpp  netmsgq.cpp  netsession.cpp  netsessionmgr.cpp  sql.cpp  unet.cpp  unetbase.cpp  unetlobbyserverbase.cpp  unetmain.cpp  unetserverbase.cpp
src/client/: Makefile.am  alcpatch.cpp  alcpatch.h
src/servers/: Makefile.am  Makefile.in  alcmsgtest.cpp  alcping.cpp  alcugs_main.cpp  authbackend.cpp  authbackend.h  authmsg.cpp  authmsg.h  authserver.cpp  authserver.h  gameserver.cpp  gameserver.h  gamesubmsg.cpp  gamesubmsg.h  guidgen.cpp  guidgen.h  lobby.h  lobbyserver.cpp  lobbyserver.h  sdl.cpp  sdl.h  sdlbinary.cpp  sdlbinary.h  trackingbackend.cpp  trackingbackend.h  trackingmsg.cpp  trackingmsg.h  uru.cpp  (+10 more)
templates/: cpp.template  h.template
tools/: README  adduser.php  control-config.sh  control-servers.sh  log-filter.sh
unused/: alcpatch.cpp  alcpkg.cpp  alcpkg.h  pypkg.cpp  pypkg.h
(+43 files in other folders)
