include_alcbasedir = $(includedir)/alcbase
include_alcbase_HEADERS = $(top_srcdir)/include/alcbase/*.h

include_alcbase_alcutildir = $(includedir)/alcbase/alcutil
include_alcbase_alcutil_HEADERS = $(top_srcdir)/include/alcbase/alcutil/*.h

include_alcbase_urutypesdir = $(includedir)/alcbase/urutypes
include_alcbase_urutypes_HEADERS = $(top_srcdir)/include/alcbase/urutypes/*.h



include_alcnetdir = $(includedir)/alcnet
include_alcnet_HEADERS = $(top_srcdir)/include/alcnet/*.h

include_alcnet_protocoldir = $(includedir)/alcnet/protocol
include_alcnet_protocol_HEADERS = $(top_srcdir)/include/alcnet/protocol/*.h
